Changing package name
FelixSoft is an existing company and would probably sue me.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.felixsoft.gw2w"
+    package="com.felixware.gw2w"
     android:versionCode="1"
     android:versionName="1.0" >
 
