Add handler to open wiki URLs directly
- Add intent filter for all language wikis to trigger the launch when a
  wiki url is opened.
- Pass the intent's data URI from `LoadingActivity` to `MainActivity`.
- Add handler to parse page title and language from the URI, set the
  language and open the target article directly.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,8 +19,15 @@
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="http" android:host="wiki.guildwars2.com" />
+                <data android:scheme="http" android:host="wiki-de.guildwars2.com" />
+                <data android:scheme="http" android:host="wiki-fr.guildwars2.com" />
+                <data android:scheme="http" android:host="wiki-es.guildwars2.com" />
             </intent-filter>
         </activity>
         <activity
