--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.felixware.gw2w"
-    android:versionCode="3"
-    android:versionName="1.0.2" >
+    android:versionCode="4"
+    android:versionName="1.1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:icon="@drawable/gw2wicon"
+        android:icon="@drawable/launcher_new"
         android:label="@string/app_name"
         android:theme="@style/Theme.Styled" >
         <activity
